bitfield/tests/14-multiple-bits-attributes-on-same-struct-field.stderr
error: multiple `bits` attributes on the same field
 --> tests/14-multiple-bits-attributes-on-same-struct-field.rs:7:5
  |
7 |     #[bits = 8]
  |     ^^^^^^^^^^^
